# h2-p2-full-stack-todo-app

./: .gitignore  DEPLOYMENT_GUIDE.md  OPEN_APP.bat  README.md  START_APP_GUIDE.md  TEST_APP.html  main.py  pyproject.toml  ⚡QUICK_START.bat
.claude/agents/: hotel-architect.md  hotel-spec-master.md
.claude/skills/hotel-booking-validator/: SKILL.md
.claude/skills/hotel-implementation-checklist/: SKILL.md
.claude/skills/hotel-spec-reviewer/: SKILL.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  README_HUGGINGFACE.md  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/alembic/versions/: 002_add_ai_chat_features.py
backend/src/: main.py
backend/src/api/: chat.py
backend/src/core/: config.py
backend/src/models/: chat.py
backend/src/services/: ai_service.py
frontend/: middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: ChatWidget.tsx  Navbar.tsx
frontend/lib/: chatApi.ts
history/prompts/constitution/: 001-evolution-todo-constitution.constitution.prompt.md
specs-history/: phase1-initial.spec.md
specs-history/checklists/: phase1-requirements.md
specs-history/planning/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
src/: main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  todo_manager.py
src/ui/: __init__.py  console_ui.py
src/utils/: validators.py
(+5 files in other folders)
